@@ -1,0 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Étudiant Dashboard</title>
+</head>
+
+<body>
+    <h1>Étudiant Dashboard</h1>
+    <p>Welcome! You are an Étudiant.</p>
+</body>
+
+</html>
