@@ -1,5 +1,6 @@
 <?php
-
+use App\Http\Controllers\EtudiantController;
+use App\Http\Controllers\DelegueController;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\AuthController;
 
@@ -19,3 +20,13 @@ Route::get('/', function () { return view('home');});
 #Hado dial login
 Route::get('/login', [AuthController::class, 'showLoginForm'])->name('login');
 Route::post('/login', [AuthController::class, 'login']);
+
+// routes/web.php
+
+Route::group(['middleware' => 'auth'], function () {
+    Route::get('/etudiant-dashboard', [EtudiantController::class, 'index'])->name('etudiant.dashboard');
+    Route::get('/delegue-dashboard', [DelegueController::class, 'index'])->name('delegue.dashboard');
+    // Add routes for other roles
+});
+
+
